src/objects/EmailAddress__c.object
<CustomObject>
    <description>All Email addresses related to a contact</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Addresses</relationshipLabel>
        <relationshipName>EmailAddresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EmailCode__c</fullName>
        <label>Email Code</label>
        <picklist>
            <picklistValues>
                <fullName>CPMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WORK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <label>PIDM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusIndicator__c</fullName>
        <label>Status Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentId__c</fullName>
        <formula>Contact__r.StudentID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Id</label>
        <type>Text</type>
    </fields>
    <label>Email Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Student Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>